[gd_scene load_steps=39 format=3 uid="uid://0g10r0q38tuq"]

[ext_resource type="Script" uid="uid://cw3c1rtetm36v" path="res://scripts/quiz.gd" id="1_bn6h1"]
[ext_resource type="Texture2D" uid="uid://c7nnbufssmhhr" path="res://backgrounds/background-dojo.png" id="2_t0h63"]
[ext_resource type="Script" uid="uid://b503ow8acjsdh" path="res://scripts/player.gd" id="3_lcje5"]
[ext_resource type="Texture2D" uid="uid://0evigqwl5nf8" path="res://sprites/player-1-punch-Sheet.png" id="4_euwqo"]
[ext_resource type="Texture2D" uid="uid://chedse1n5fo8c" path="res://sprites/player-1-idle-Sheet.png" id="5_vwwmd"]
[ext_resource type="Script" uid="uid://bs4v4covptiyl" path="res://scripts/sensei.gd" id="6_16nxq"]
[ext_resource type="Texture2D" uid="uid://xejxs3rg44xq" path="res://sprites/samurai-swing-Sheet.png" id="7_xcx78"]
[ext_resource type="Texture2D" uid="uid://bwoo0uebj4f7e" path="res://sprites/samurai-1-idle-Sheet.png" id="8_kp58l"]
[ext_resource type="PackedScene" uid="uid://dlgomokut75vv" path="res://scenes/kana_preview.tscn" id="9_t0h63"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k7kv1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8ks50"]
atlas = ExtResource("4_euwqo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kibl2"]
atlas = ExtResource("4_euwqo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ywla"]
atlas = ExtResource("4_euwqo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyahu"]
atlas = ExtResource("4_euwqo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1o6nl"]
atlas = ExtResource("4_euwqo")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jekrg"]
atlas = ExtResource("4_euwqo")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oigk4"]
atlas = ExtResource("4_euwqo")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoppe"]
atlas = ExtResource("4_euwqo")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7qks"]
atlas = ExtResource("4_euwqo")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hdrk"]
atlas = ExtResource("5_vwwmd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5p1yt"]
atlas = ExtResource("5_vwwmd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrhq4"]
atlas = ExtResource("5_vwwmd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bctmb"]
atlas = ExtResource("5_vwwmd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6tpgk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ks50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kibl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ywla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyahu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1o6nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jekrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oigk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoppe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7qks")
}],
"loop": false,
"name": &"attack",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hdrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p1yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrhq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bctmb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jbsow"]
atlas = ExtResource("7_xcx78")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6tg3"]
atlas = ExtResource("7_xcx78")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17gwc"]
atlas = ExtResource("7_xcx78")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21fs5"]
atlas = ExtResource("7_xcx78")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhtvr"]
atlas = ExtResource("7_xcx78")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_75oe3"]
atlas = ExtResource("7_xcx78")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agf73"]
atlas = ExtResource("7_xcx78")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvcsd"]
atlas = ExtResource("7_xcx78")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3hbf"]
atlas = ExtResource("7_xcx78")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_88ao6"]
atlas = ExtResource("8_kp58l")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v4xj"]
atlas = ExtResource("8_kp58l")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbrtv"]
atlas = ExtResource("8_kp58l")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_47h2k"]
atlas = ExtResource("8_kp58l")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rayto"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbsow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6tg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17gwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21fs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhtvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75oe3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agf73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvcsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3hbf")
}],
"loop": false,
"name": &"attack",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88ao6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v4xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbrtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47h2k")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="quiz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bn6h1")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.796243, 0.796243, 0.796243, 1)
texture_filter = 1
position = Vector2(577.2222, 325)
scale = Vector2(3.588889, 3.588889)
texture = ExtResource("2_t0h63")

[node name="hiragana" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.020000001
anchor_right = 0.5
anchor_bottom = 0.020000001
offset_left = -11.0
offset_top = 0.03999901
offset_right = 11.0
offset_bottom = 53.04
grow_horizontal = 2
theme_override_font_sizes/font_size = 38
text = "a"

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.94100004
anchor_right = 0.5
anchor_bottom = 0.94100004
offset_left = -286.5
offset_top = -39.768005
offset_right = 286.5
offset_bottom = 0.23199463
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="choice1" type="Button" parent="buttons"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_k7kv1")

[node name="choice2" type="Button" parent="buttons"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_k7kv1")

[node name="choice3" type="Button" parent="buttons"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_k7kv1")

[node name="health" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.96300006
anchor_top = 0.002
anchor_right = 0.96300006
anchor_bottom = 0.002
offset_left = -192.3761
offset_top = -0.296
offset_right = -0.37609863
offset_bottom = 33.704
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "health: 3"

[node name="Player" type="Node2D" parent="."]
script = ExtResource("3_lcje5")

[node name="Sprite" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
position = Vector2(477, 457.00003)
scale = Vector2(5.25, 5.25)
sprite_frames = SubResource("SpriteFrames_6tpgk")
animation = &"idle"

[node name="HealthBar" type="ProgressBar" parent="Player"]
offset_left = 125.0
offset_top = 612.0
offset_right = 458.0
offset_bottom = 639.0
show_percentage = false

[node name="Sensei" type="Node2D" parent="."]
script = ExtResource("6_16nxq")

[node name="Sprite" type="AnimatedSprite2D" parent="Sensei"]
texture_filter = 1
position = Vector2(636, 462.99997)
scale = Vector2(5.25, 5.25)
sprite_frames = SubResource("SpriteFrames_rayto")
animation = &"attack"

[node name="HealthBar" type="ProgressBar" parent="Sensei"]
offset_left = 693.0
offset_top = 612.0
offset_right = 1026.0
offset_bottom = 639.0
show_percentage = false

[node name="KanaPreview" parent="." instance=ExtResource("9_t0h63")]
visible = false
layout_mode = 1

[node name="Countdown" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 90
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlackFade" type="ColorRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="player_damaged" from="." to="Player" method="_on_quiz_player_damaged"]
[connection signal="pressed" from="buttons/choice1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="buttons/choice2" to="." method="_on_choice_2_pressed"]
[connection signal="pressed" from="buttons/choice3" to="." method="_on_choice_3_pressed"]
[connection signal="animation_finished" from="Player/Sprite" to="Player" method="_on_sprite_animation_finished"]
[connection signal="animation_finished" from="Sensei/Sprite" to="Sensei" method="_on_sprite_animation_finished"]
